# banshee

./: .gitignore  AUTHORS  Banshee.sln  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  NOTES  README  autogen.sh  banshee.doap  banshee.mdp  configure.ac
ext/libmtp-sharp/: AssemblyInfo.cs  Folder.cs  Makefile.am  MtpDevice.cs  Track.cs  libmtp-sharp.dll.config.in  libmtp-sharp.mdp
ext/libmtp-sharp/Base/: Album.cs  DeviceEntry.cs  DeviceStorage.cs  Enums.cs  Error.cs  File.cs  FileSampleData.cs  FolderStruct.cs  MtpDeviceStruct.cs  Playlist.cs  TrackStruct.cs
ext/libmtp-sharp/Functions/: AlbumManagement.cs  FileManagement.cs  FolderManagement.cs  FunctionCalls.cs  PlaylistManagement.cs  TrackManagement.cs
src/Backends/Banshee.GStreamer/: Banshee.GStreamer.csproj  Makefile.am
src/Backends/Banshee.GStreamer/Banshee.GStreamer/: AudioCdRipper.cs  BpmDetector.cs  PlayerEngine.cs  Service.cs  TagList.cs  Transcoder.cs
src/Backends/Banshee.GStreamer/libbanshee/: Makefile.am  banshee-player-pipeline.c  banshee-player-video.c  clutter-gst-video-sink.c  clutter-gst-video-sink.h
src/Dap/Banshee.Dap.Mtp/: Banshee.Dap.Mtp.csproj  Banshee.Dap.Mtp.mdp  ChangeLog  Makefile.am  MtpDap.cs  MtpDapPlaylistSource.cs  MtpDapTrackInfo.cs
src/Dap/Banshee.Dap.Mtp/Banshee.Dap.Mtp/: MtpSource.cs
src/Extensions/Banshee.Paas/: Banshee.Paas.addin.xml  Banshee.Paas.csproj  Makefile.am
src/Extensions/Banshee.Paas/Banshee.Paas/: DownloadManagerInterface.cs  PaasDownloadManager.cs  PaasImageFetchJob.cs  PaasService.cs  PaasSource.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas/: PaasImageFetchJob.cs  PaasService.cs  PaasSource.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Aether/: AetherClient.cs  AetherClientID.cs  AetherClientState.cs  AetherDelta.cs  AetherRequest.cs  AetherRequestCompletedEventArgs.cs  ChannelEventArgs.cs  ChannelUpdateStatus.cs  DownloadPreference.cs  ItemEventArgs.cs  OpmlParser.cs  RequestState.cs  Rfc822DateTime.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Aether/Client/: AetherClient.cs  AetherClientStateChangedEventArgs.cs  AsyncStateManager.cs  HttpMethod.cs  RequestState.cs  ServiceMethodFlags.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/: AetherAsyncCompletedEventArgs.cs  AetherDelta.cs  ClientIDChangedEventArgs.cs  DownloadRequestEventArgs.cs  GetCategoriesCompletedEventArgs.cs  GetChannelsEventArgs.cs  MiroGuideAccountInfo.cs  MiroGuideCategoryInfo.cs  MiroGuideChannelInfo.cs  MiroGuideClient.cs  RequestState.cs  (+11 more)
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient.Gui/: MiroGuideAccountDialog.cs  MiroGuideActions.cs  MiroGuideChannelListModel.cs  MiroGuideChannelListView.cs  MiroGuideLoginForm.cs  MiroGuideSearchEntry.cs  TestSource.cs  TestSourceContents.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Data/: DownloadPreference.cs  DownloadStatusFilterModel.cs  ListModel.cs  PaasChannel.cs  PaasChannelModel.cs  PaasItem.cs  PaasTrackInfo.cs  PaasTrackListModel.cs  PaasUnheardFilterModel.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.DownloadManager/: DownloadListModel.cs  PaasDownloadManager.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.DownloadManager.Data/: QueuedDownloadTask.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.DownloadManager.Gui/: DownloadListModel.cs  DownloadListView.cs  DownloadManagerInterface.cs  DownloadSource.cs  DownloadSourceContents.cs  DownloadUserJob.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Gui/: ColumnCellChannel.cs  ColumnCellDownloadStatus.cs  ColumnCellPaasStatusIndicator.cs  ColumnCellPublished.cs  ColumnCellUnheard.cs  DownloadPreferenceComboBox.cs  DownloadStatusFilterView.cs  IColumnCellDataHelper.cs  PaasActions.cs  PaasChannelView.cs  PaasColumnController.cs  PaasItemPage.cs  PaasItemView.cs  PaasSource.cs  PaasSourceContents.cs  PaasUnheardFilterView.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.MiroGuide/: MiroGuideCategoryListModel.cs  MiroGuideChannelListModel.cs  MiroGuideImageFetchJob.cs  MiroGuideInterfaceManager.cs  MiroGuideSearchFilter.cs  MiroGuideSourceManager.cs  TestSource.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.MiroGuide.Gui/: ColumnCellChannel.cs  MiroGuideAccountDialog.cs  MiroGuideActions.cs  MiroGuideCategoryListView.cs  MiroGuideChannelListView.cs  MiroGuideLoginForm.cs  MiroGuideSearchEntry.cs  MiroGuideSourceManager.cs  SortPreferenceActionButton.cs  SortPreferenceChangedEventArgs.cs  TestSource.cs  TestSourceContents.cs
src/Extensions/Banshee.Paas/Banshee.Paas/Banshee.Paas.Utils/: OpmlParser.cs  OrderComparer.cs  StringUtils.cs
src/Extensions/Banshee.Paas/Resources/: ActiveSourceUI.xml  GlobalUI.xml  MiroGuideActiveSourceUI.xml  MiroGuideUI.xml
src/Libraries/Migo2/: Makefile.am  Migo2.csproj
src/Libraries/Migo2/Migo2.Async/: AsyncStateManager.cs
src/Libraries/Migo2/Migo2.Async/CommandQueue/: CommandDelegate.cs  CommandQueue.cs  CommandWrapper.cs  EventWrapper.cs  ICommand.cs
src/Libraries/Migo2/Migo2.Async/Task/: CancellationType.cs  IWaitableTask.cs  Task.cs  TaskCompletedEventArgs.cs  TaskEventArgs.cs  TaskState.cs  TaskStateChangedEventArgs.cs  WaitableTask.cs
src/Libraries/Migo2/Migo2.Async/TaskGroup/: GroupProgressManager.cs  GroupStatusManager.cs  TaskGroup.cs  TaskGroup_Collection.cs
src/Libraries/Migo2/Migo2.Collections/: Pair.cs
src/Libraries/Migo2/Migo2.DownloadService/: DownloadStatusManager.cs  DownloadTaskStatusUpdatedEventArgs.cs  HttpDownloadGroup.cs  HttpDownloadGroupStatusChangedEventArgs.cs  HttpDownloadManager.cs  HttpFileDownloadErrors.cs  HttpFileDownloadTask.cs
src/Libraries/Migo2/Migo2.Net/AsyncWebClient/: AsyncWebClient.cs  DownloadDataCompletedEventArgs.cs  DownloadProgressChangedEventArgs.cs  DownloadStatus.cs  DownloadStatusUpdatedEventArgs.cs  DownloadStringCompletedEventArgs.cs  RemoteFileModifiedException.cs  TransferStatusManager.cs  TransferStatusManager_Rate.cs
src/Libraries/Migo2/Migo2.Utils/: Rfc822DateTime.cs  UnitUtils.cs  XmlUtils.cs
tests/: Makefile.am
(+629 files in other folders)
