ASSEMBLY = Banshee.Paas
TARGET = library
LINK = $(REF_EXTENSION_PAAS)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES =  \
	Banshee.Paas/Banshee.Paas.Aether/AetherClient.cs \
	Banshee.Paas/Banshee.Paas.Aether/AetherClientID.cs \
	Banshee.Paas/Banshee.Paas.Aether/AetherClientState.cs \
	Banshee.Paas/Banshee.Paas.Aether/AetherClientStateChangedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/AetherRequest.cs \
	Banshee.Paas/Banshee.Paas.Aether/AetherRequestCompletedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/ChannelEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/ChannelUpdateStatus.cs \
	Banshee.Paas/Banshee.Paas.Aether/ItemEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/AetherDelta.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/ClientIDChangedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/DownloadRequestEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/GetCategoriesCompletedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/GetChannelsEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideAccountInfo.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideCategoryInfo.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideChannelInfo.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideClient.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideClientError.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideClientInfo.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideClientMethod.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideFilterType.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideMethodCompletedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideRequestState.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/MiroGuideSortType.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/RequestCompletedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/SearchContext.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/ServiceMethodFlags.cs \
	Banshee.Paas/Banshee.Paas.Aether/MiroGuideClient/SubscriptionRequestedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/RequestState.cs \
	Banshee.Paas/Banshee.Paas.Aether/SyndicationClient/ChannelUpdateCompletedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.Aether/SyndicationClient/ChannelUpdateManager.cs \
	Banshee.Paas/Banshee.Paas.Aether/SyndicationClient/ChannelUpdateTask.cs \
	Banshee.Paas/Banshee.Paas.Aether/SyndicationClient/ItmsPodcast.cs \
	Banshee.Paas/Banshee.Paas.Aether/SyndicationClient/RssParser.cs \
	Banshee.Paas/Banshee.Paas.Aether/SyndicationClient/SyndicationClient.cs \
	Banshee.Paas/Banshee.Paas.Data/DownloadPreference.cs \
	Banshee.Paas/Banshee.Paas.Data/DownloadStatusFilterModel.cs \
	Banshee.Paas/Banshee.Paas.Data/ListModel.cs \
	Banshee.Paas/Banshee.Paas.Data/PaasChannel.cs \
	Banshee.Paas/Banshee.Paas.Data/PaasChannelModel.cs \
	Banshee.Paas/Banshee.Paas.Data/PaasItem.cs \
	Banshee.Paas/Banshee.Paas.Data/PaasTrackInfo.cs \
	Banshee.Paas/Banshee.Paas.Data/PaasTrackListModel.cs \
	Banshee.Paas/Banshee.Paas.Data/PaasUnheardFilterModel.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager.Data/QueuedDownloadTask.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager.Gui/DownloadListView.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager.Gui/DownloadManagerInterface.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager.Gui/DownloadSource.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager.Gui/DownloadSourceContents.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager.Gui/DownloadUserJob.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager/DownloadListModel.cs \
	Banshee.Paas/Banshee.Paas.DownloadManager/PaasDownloadManager.cs \
	Banshee.Paas/Banshee.Paas.Gui/ColumnCellChannel.cs \
	Banshee.Paas/Banshee.Paas.Gui/ColumnCellDownloadStatus.cs \
	Banshee.Paas/Banshee.Paas.Gui/ColumnCellPaasStatusIndicator.cs \
	Banshee.Paas/Banshee.Paas.Gui/ColumnCellPublished.cs \
	Banshee.Paas/Banshee.Paas.Gui/ColumnCellUnheard.cs \
	Banshee.Paas/Banshee.Paas.Gui/Dialogs/ChannelPropertiesDialog.cs \
	Banshee.Paas/Banshee.Paas.Gui/Dialogs/SubscribeDialog.cs \
	Banshee.Paas/Banshee.Paas.Gui/DownloadPreferenceComboBox.cs \
	Banshee.Paas/Banshee.Paas.Gui/DownloadStatusFilterView.cs \
	Banshee.Paas/Banshee.Paas.Gui/IColumnCellDataHelper.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasActions.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasChannelView.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasColumnController.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasItemPage.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasItemView.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasSourceContents.cs \
	Banshee.Paas/Banshee.Paas.Gui/PaasUnheardFilterView.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/ColumnCellChannel.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideAccountDialog.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideActions.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideCategoryListView.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideChannelListView.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideLoginForm.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/MiroGuideSearchEntry.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SortPreferenceActionButton.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SortPreferenceChangedEventArgs.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SourceContents/BrowserSourceContents.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SourceContents/ChannelSourceContents.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide.Gui/SourceContents/MiroGuideSourceContents.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideCategoryListModel.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideChannelListModel.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideImageFetchJob.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideInterfaceManager.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/MiroGuideSearchFilter.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/BrowseChannelsSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/ChannelSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/FeaturedChannelsSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/HDChannelsSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/MiroGuideSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/MiroGuideSourcePosition.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/PopularChannelsSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/RecommendedChannelsSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/SearchSource.cs \
	Banshee.Paas/Banshee.Paas.MiroGuide/Sources/TopRatedChannelsSource.cs \
	Banshee.Paas/Banshee.Paas.Utils/OpmlParser.cs \
	Banshee.Paas/Banshee.Paas.Utils/OrderComparer.cs \
	Banshee.Paas/Banshee.Paas.Utils/StringUtils.cs \
	Banshee.Paas/Banshee.Paas/PaasImageFetchJob.cs \
	Banshee.Paas/Banshee.Paas/PaasService.cs \
	Banshee.Paas/Banshee.Paas/PaasSource.cs

RESOURCES =  \
	Banshee.Paas.addin.xml \
	Resources/ActiveSourceUI.xml \
	Resources/MiroGuideActiveSourceUI.xml \
	Resources/GlobalUI.xml \
	Resources/MiroGuideUI.xml

if ENABLE_PAAS
include $(top_srcdir)/build/build.mk
else
EXTRA_DIST = $(SOURCES) $(RESOURCES)
endif

